Update CSS and HTML for responsiveness and text overflow fix

--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@
     inset: 0 0 0 0;
     content: attr(data-content);
     z-index: 2;
-    -webkit-text-stroke: 2px #d2d2d2;
+    -webkit-text-stroke: 2px #ffffff;
+    /* -webkit-text-stroke: 2px #d2d2d2; */
     color: transparent;
 }
 .banner .content .author{
